--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@ body{
 }
 
 main{
- grid-column:1/2;
+ grid-column:1/3;
+ display: grid;
+ grid-template-columns: 3fr 1fr;
 }
 
 header{
@@ -157,4 +159,104 @@ button:hover{
     background-color: #151581;
     transform:scale(1.15);
     transition:0.15s ease-in-out;
+}
+
+h3{
+    font-size:16px;
+    margin-top:8px;
+    margin-bottom:15px;
+    
+}
+
+.left-content, .right-content{
+    padding:20px;
+}
+
+.projects-title{
+    grid-column:1/2;
+}
+
+.projects{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(20rem,1fr));
+    gap:20px;
+}
+
+.card{
+    background-color: white;
+    padding: 15px;
+    border-radius: 10px;
+    text-align: left;
+    min-height: calc(125px+7vw);
+    width: auto;
+    border-left: #5555ff 7px solid;
+    box-shadow: 0px 4px 3px #d2d2d2;
+}
+
+.card>h4{
+    margin-bottom:6px;
+}
+
+.card p{
+    font-size: 14px;
+    color:#5f5f5f;
+}
+.announcements{
+    margin-bottom:20px;
+}
+.announcements-card{
+    background-color:white;
+    padding:20px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0px 4px 3px #d2d2d2;
+}
+
+.announcements-card h4{
+    font-size:14px;
+}
+
+.announcements-card p{
+    font-size:12px;
+}
+
+.announcements-card>div{
+    border-bottom: #c7c7c7 solid 1px;
+    padding: 10px;
+}
+
+.announcements-card>div:nth-child(3){
+    border-bottom: none;
+}
+
+.trend-card{
+    background-color:white;
+    padding:20px;
+    border-radius: 10px;
+    margin-bottom: 10px; 
+    box-shadow: 0px 4px 3px #d2d2d2;
+}
+
+.trend-card>div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.trend-card>div:nth-child(3){
+    margin-bottom: 0px;
+}
+
+.trend-card>div>img{
+    width: 40px;
+    border-radius: 50px;
+    margin-right: 20px;
+}
+
+.trend-card>div>span>h4{
+    font-size:14px;
+}
+
+.trend-card>div>span>p{
+    font-size:12px;
 }
