--- a/style.css
+++ b/style.css
@@ -201,6 +201,12 @@ h3{
     font-size: 14px;
     color:#5f5f5f;
 }
+
+.card img{
+    max-width:100% ;
+    border-radius: 20px;
+}
+
 .announcements{
     margin-bottom:20px;
 }
@@ -259,4 +265,22 @@ h3{
 
 .trend-card>div>span>p{
     font-size:12px;
+}
+
+.project-buttons{
+    display: flex;
+    gap:20px;
+    font-size: 12px;
+    align-items: flex-end;
+    justify-content: right;
+    margin-top:20px;
+    padding: 10px;
+}
+
+.project-buttons a{
+    text-decoration: none;
+    background-color: #5555ff;
+    color: white;
+    padding:10px;
+    border-radius: 20px;
 }
